<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitePlugInPool">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8D08D"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/nomDuProjet"
            android:textSize="28sp"
            android:textColor="@color/noir"
            android:contentDescription="@string/nomDuProjet"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintHorizontal_bias="0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="270dp"
            android:layout_height="149dp"
            android:contentDescription="@string/logoCampus"
            android:src="@drawable/logo_campus_lasalle"
            android:layout_margin="8dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imageProjet"
        android:src="@drawable/billard"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/entete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boutons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/configuration_rencontre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:backgroundTint="@color/rouge"
            android:fontFamily="sans-serif-medium"
            android:text="@string/boutonVersConfiguration"
            android:textColor="@color/noir"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/historique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/vert"
            android:fontFamily="sans-serif-medium"
            android:text="@string/boutonVersHistorique"
            android:textColor="@color/noir"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/configuration_rencontre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="@string/VERSION"
        android:textSize="14sp"
        android:textColor="@color/noir"
        android:contentDescription="@string/VERSION"
        android:paddingStart="16dp"
        android:paddingBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>