<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActiviteGestionPartie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8D08D"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewNomApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/nomDuProjet"
            android:textSize="35sp"
            android:textColor="@color/noir"
            android:contentDescription="@string/nomDuProjet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <ImageView
            android:id="@+id/imageViewLogoApplication"
            android:layout_width="270dp"
            android:layout_height="149dp"
            android:contentDescription="@string/logoCampus"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/logo_campus_lasalle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNomsJoueurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/entete"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/texteNomJoueur1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/texteSelectionJoueur1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/texteSelectionJoueur1"
            android:textColor="@color/vert"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/texteNomJoueur2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texteNomJoueur2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/texteSelectionJoueur2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/texteSelectionJoueur2"
            android:textColor="@color/vert"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/texteNomJoueur1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choixJoueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNomsJoueurs">

        <TextView
            android:id="@+id/nomJoueur1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nomJoueur2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomJoueur2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nomJoueur1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nbParties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/choixJoueur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/texteNbParties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text=""
            android:textColor="@color/vert"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/liaisonBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nbParties"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/nomBluetoothEcran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/texteChoixBluetoothEcran"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/texteChoixBluetoothEcran"
            android:textColor="@color/vert"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nomBluetoothTable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomBluetoothTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/texteChoixBluetoothTable"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/texteChoixBluetoothTable"
            android:textColor="@color/vert"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nomBluetoothEcran"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choixBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/liaisonBluetooth">

        <Spinner
            android:id="@+id/spinnerBluetoothEcran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:prompt="@string/choisirLiaisonBluetooth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerBluetoothTable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinnerBluetoothTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:prompt="@string/choisirLiaisonBluetooth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinnerBluetoothEcran"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lancerPartie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/choixBluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/boutonSuivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="320dp"
            android:backgroundTint="@color/rouge"
            android:fontFamily="sans-serif-medium"
            android:text="@string/boutonSuivant"
            android:textColor="@color/noir"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
